[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/turret.png" type="Texture" id=1]
[ext_resource path="res://Turret.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.012, 9.99744 )

[sub_resource type="CircleShape2D" id=2]
radius = 89.9917

[node name="Turret" type="StaticBody2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="RangeArea2D" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea2D"]
position = Vector2( -0.122086, 0 )
shape = SubResource( 2 )

[node name="GunPosition2D" type="Position2D" parent="."]
position = Vector2( 0, -13.9179 )
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
